updated keg system to use gravwell

--- a/kegarator.conf
+++ b/kegarator.conf
@@ -1,6 +1,5 @@
 [global]
 Bind-Port=80
-Bind-Interface=wlan0
 WWW-Dir=/opt/kegarator/
 Temperature-Probe-Interval=10
 Minimum-Temperature=0.0
@@ -8,7 +7,12 @@ Maximum-Temperature=6.5
 Target-Temperature=5.0
 Compressor-GPIO=22
 
-[Alias "System"]
+[Gravwell]
+Ingest-Secret=SuperHardSecretOfDoom
+Cleartext-Backend-Target=porter.gravwell.io:4023
+Log-Level=INFO
+
+Alias "System"]
 ID="28-000006543218"
 
 [Alias "Keg 1"]
