fixed up config file and alias init code

--- a/kegarator.conf
+++ b/kegarator.conf
@@ -2,6 +2,7 @@
 Bind-Port=80
 WWW-Dir=/opt/kegarator/
 Temperature-Probe-Interval=10
+Temperature-Record-Interval=10
 Minimum-Temperature=0.0
 Maximum-Temperature=6.5
 Target-Temperature=5.0
@@ -12,13 +13,13 @@ Ingest-Secret=SuperHardSecretOfDoom
 Cleartext-Backend-Target=porter.gravwell.io:4023
 Log-Level=INFO
 
-Alias "System"]
-ID="28-000006543218"
+[Alias "System"]
+ID="28-000006153708"
 
 [Alias "Keg 1"]
-ID="28-000006543210"
+ID="28-000006157ac7"
 Compressor-Control=true
 
 [Alias "Keg 2"]
-ID="28-000006543219"
+ID="28-0000061555d2"
 Compressor-Control=true
