updating reporting logic to throw compressor engagement to a different tag then temperature controls

--- a/kegarator.conf
+++ b/kegarator.conf
@@ -7,10 +7,11 @@ Minimum-Temperature=0.0
 Maximum-Temperature=6.5
 Target-Temperature=5.0
 Compressor-GPIO=22
+Data-Format=binary
 
 [Gravwell]
-Ingest-Secret=SuperHardSecretOfDoom
-Cleartext-Backend-Target=porter.gravwell.io:4023
+Ingest-Secret=ASecret
+Cleartext-Backend-Target=127.0.0.1:4023
 Log-Level=INFO
 
 [Alias "System"]
